--- a/styles.css
+++ b/styles.css
@@ -43,13 +43,12 @@ main{
 
 @media (hover: hover){
 /* target only devices that can hover */
+    .card:hover{
+    /* aplicamos el efecto :hover */
+        transform: rotateY(180deg);
+    }
 }
 
-@media (hover: none){
+/* @media (hover: none){
 /* target only devices that don't hover */
-}
-
-.card:hover{
-/* aplicamos el efecto :hover */
-    transform: rotateY(180deg);
-}
+/* } */
