gradient efect added

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,24 @@ main{
     transform: rotateX(180deg);
 }
 
+.card-description{
+    color: rgb(241, 235, 250);
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+
+    /* gradiente */
+    background: linear-gradient(
+        hsl(0 0% 0% / 0),
+        hsl(260 50% 50% / 1) 20%,
+        hsl(0 0% 0% / 1)
+    );
+}
+
+.card-description h6{
+    font-family:Arial, Helvetica, sans-serif
+    color:aliceblue;
+    padding-top: 5px;
+}
 
 /* ------------ queries -------------- */
 
