--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ main{
 }
 
 .card-description h6{
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
     color:aliceblue;
     padding-top: 5px;
 }
