imagen background agregada

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 main{
-    background: url(https://pincelesymas.com/wp-content/uploads/2020/08/top-ocho-8-herramientas-para-comenzar-en-la-pintura-ahora-en-casa-2020.png);
+    background: url(/img/background-pinceles.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
