--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ main{
     /* gradiente */
     background: linear-gradient(
         hsl(0 0% 0% / 0),
-        hsl(260 50% 50% / 1) 20%,
+        rgb(18, 155, 43) 20%,
         hsl(0 0% 0% / 1)
     );
 }
@@ -59,8 +59,6 @@ main{
 }
 
 /* ------------ queries -------------- */
-
-
 .card.hover{
     /* aplicamos el efecto :hover */
     transform: rotateY(180deg);
